[package]
name = "palombe"
version = "0.4.1"
authors = ["Yvan Sraka <yvan@sraka.xyz>"]
description = "Palombe lets you send and receive messages synchronously through different processes using named pipes"
license = "GPL-3.0"

[lib]
name = "palombe"
path = "src/lib.rs"
crate-type = ["dylib", "staticlib", "cdylib", "rlib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies]
libc = "0.2"
