[package]
name = "palombe"
version = "0.4.0"
authors = ["Yvan Sraka <yvan@sraka.xyz>"]
description = "Palombe lets you send and receive messages synchronously through different processes using named pipes"
license = "GPL-3.0"

[lib]
name = "palombe"
path = "src/lib.rs"
crate-type = ["dylib", "staticlib"]

[dependencies]
libc = "0.2"
